--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "express-server",
+  "name": "eefe_express_template",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
