--- a/package.json
+++ b/package.json
@@ -1,14 +1,19 @@
 {
   "name": "eefe_express_template",
   "version": "1.0.0",
-  "description": "",
+  "description": "企业效能前端 Express 服务器模板",
+  "author": {
+    "name": "sunyanfeng",
+    "email": "sunyanfeng@sensrosdata.cn"
+  },
   "main": "index.js",
   "scripts": {
     "start": "nodemon server.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "keywords": [
+    "Node",
+    "Express"
+  ],
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
@@ -22,5 +27,6 @@
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
-  }
+  },
+  "license": "ISC"
 }
